[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/round_progress_bar.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/FinalCountdown.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/CaviarDreams_Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 350
use_filter = true
extra_spacing_char = -35
font_data = ExtResource( 3 )

[node name="FinalCountdown" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 960, 540 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
colors = [ Color( 0.980392, 0.262745, 0.262745, 1 ), Color( 0.541176, 0.827451, 0.282353, 1 ), Color( 0.992157, 0.533333, 0.2, 1 ), Color( 0.14902, 0.47451, 0.709804, 1 ), Color( 0.94902, 0.890196, 0.262745, 1 ), Color( 0.239216, 0.788235, 0.686275, 1 ), Color( 0.886275, 0.52549, 0.729412, 1 ), Color( 0.172549, 0.878431, 0.529412, 1 ), Color( 0.584314, 0.337255, 0.827451, 1 ), Color( 0.317647, 0.666667, 0.976471, 1 ), Color( 1, 1, 1, 1 ) ]

[node name="ClockUnder" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -500.0
margin_right = 500.0
margin_bottom = 500.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 500, 500 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockOver" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -500.0
margin_right = 500.0
margin_bottom = 500.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 500, 500 )
step = 0.1
texture_progress = ExtResource( 1 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -249.0
margin_right = 224.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 256, 256 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
